<resources>
    <string name="app_name">StaySafe</string>
    <string name="Dashboard">Home Page</string>
    <string name="lista_testes">Test List</string>
    <string name="vacinas">Vaccination Status</string>
    <string name="contactos">Contacts</string>
    <string name="open_burger">Open the navigation menu</string>
    <string name="close_burger">Close the navigation menu</string>
    <string name="statistics">Statistics</string>
    <string name="extra_info">Other informations</string>
    <string name="add_test">Test register</string>
    
    <string name="danger">The area you are in is extremely dangerous</string>
    <string name="risky">The area you are in is very dangerous</string>
    <string name="moderate">The area you are in is dangerous</string>
    <string name="safe">The area you are in is moderate</string>
    <string name="unknown">Unknown area!</string>
    
    <string name="phone_contacts">Telephonic contacts COVID 19 </string>
    <string name="sns_line_symnptoms">SNS 24 line for symptom tracking and question answering.</string>
    <string name="social_sec_line">Social security line for questions about family assistance, disease benefit and quarantine.</string>
    <string name="consular_gab">Consulate emergency office</string>
    <string name="digital_contacts">Digital contacts COVID 19</string>
    <string name="dgs_plat">DGS platform for questions related to COVID-19</string>
    <string name="dgs_channel">SNS 24 channel for questions. Do not use for medical diagnostics</string>
    <string name="covid_law">COVID19 Laws</string>
    <string name="replublics_diary">Eletronic Republic\'s Diary area dedicated to the pandemic situation laws</string>
    <string name="result_pos">Result: Positive</string>
    <string name="result_neg">Result: Negative</string>
    <string name="teste_detail">Test details</string>
    <string name="local">Place: </string>
    <string name="data">Date: </string>
    <string name="exame">Test photo</string>
    <string name="empty_list">Empty list!</string>
    <string name="test_place">Test place</string>
    <string name="test_date">Test date</string>
    <string name="test_result">Test result</string>
    <string name="pos">Positive</string>
    <string name="neg">Negative</string>
    <string name="foto">Capture photo</string>
    <string name="gravar">Register test</string>
    <string name="invalid_local">The inserted place is invalid!</string>
    <string name="invalid_data">The inserted date is invalid!</string>
    <string name="taken_photo">Photo taken and saved successfully</string>
    <string name="test_foto">Test Photo</string>
    <string name="confirmados">Confirmed:\n</string>
    <string name="recuperados">Recovered:\n</string>
    <string name="obitos">Deaths:\n</string>
    <string name="internados">Interned:\n</string>
    <string name="age_grafic">Portuguese confirmed cases age distribution bar chart</string>
    <string name="crescente">Crescent</string>
    <string name="decrescente">Decrescent</string>
    <string name="ordenacao">Order: </string>
    <string name="staysafe">StaySafe</string>
    <string name="totalvacinas">Total of vaccine dosages administered:\n</string>
    <string name="ordenado_crescente">The list was ordered by crescent value of dates</string>
    <string name="ordenado_decrescente">The list was ordered by decrescent value of dates</string>
    <string name="first_doses">1st doses</string>
    <string name="second_doses">2nd doses</string>
    <string name="last_24">Last 24 hours in Portugal</string>

    <string name="lowbat">Dark Mode applied, low battery detected!</string>
    <string name="no_internet">No Internet! Outdated data!</string>
    <string name="camera_fail">Failed to open Camera!</string>
</resources>