<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:title="@string/Dashboard"
            android:icon="@drawable/dash" />
        <item
            android:id="@+id/add_teste"
            android:title="@string/add_test"
            android:icon="@drawable/teste_sample" />
        <item android:title="@string/statistics">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/lista_testes"
                        android:title="@string/lista_testes"
                        android:icon="@drawable/list" />
                    <item
                        android:id="@+id/vacinas"
                        android:title="@string/vacinas"
                        android:icon="@drawable/vaccine" />
                </group>
            </menu>
        </item>
        <item android:title="@string/extra_info">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/contactos"
                        android:title="@string/contactos"
                        android:icon="@drawable/contacts" />
                </group>
            </menu>
        </item>
    </group>
</menu>