<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/TableLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaTestesFragment">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:background="#D9001B"
        android:text="@string/danger"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/relative_recycler"
        android:visibility="gone">

        <Button
            android:id="@+id/decrescente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:backgroundTint="#4682B4"
            android:text="@string/decrescente" />

        <Button
            android:id="@+id/crescente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/decrescente"

            android:backgroundTint="#4682B4"
            android:text="@string/crescente" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/ordenacao"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_testes"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/crescente"
            android:background="#F5F5F5"
            android:textAlignment="textStart"
            android:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/emptyList"
        android:layout_marginTop="20dp"
        android:text="@string/empty_list"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:visibility="visible" />
</TableLayout>