<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout01_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestDetailFragment">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:background="#D9001B"
        android:text="@string/danger"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="18sp" />
    <!-- Ter atenção ao android:src, que de futuro deverá ser dinamico -->
    <ImageView
        android:id="@+id/teste_foto"
        android:layout_width="304dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/exame"
        android:focusable="true"
        android:src="@drawable/teste_empty" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/zoom" />

    <TextView
        android:id="@+id/teste_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/local"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/teste_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/data"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/teste_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/result_neg"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</TableLayout>