<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/TableLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistoTesteFragment">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:background="#D9001B"
        android:text="@string/danger"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/foto_tirada"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/taken_photo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/smartphone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/local"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:hint="@string/test_place"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            style="@style/Theme.Input"
            android:drawableLeft="@drawable/ic_baseline_place_24"
            android:text="@string/test_place"

            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">
        <!-- https://stackoverflow.com/questions/14933330/datepicker-how-to-popup-datepicker-when-click-on-edittext -->
        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/test_date"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            style="@style/Theme.Input"
            android:drawableLeft="@drawable/ic_baseline_date_range_24"
            android:text="@string/test_date"

            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        style="@style/Theme.Input"
        android:text="@string/test_result" />

    <Spinner
        android:id="@+id/result_spinner"
        app:cornerRadius="160dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border"
        android:spinnerMode="dropdown" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/take_foto"
        app:cornerRadius="60dp"
        app:icon="@drawable/tirar_foto"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="#4682B4"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/foto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regist_test"
        app:icon="@drawable/gravar"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#4682B4"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/gravar" />

</TableLayout>